<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayContact" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:id="@+id/displayImg"
            />

        <TextView
            android:id="@+id/displayTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="82dp"
                android:hint="First Name   Sur Name"
                android:ems="10"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText

                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextAddress"
                android:layout_below="@+id/editTextName"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextPhone"
                android:layout_alignLeft="@+id/textViewName"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextName"
                android:layout_below="@+id/editTextPhone"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text" />


            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editTextQuantity"
                android:layout_alignLeft="@+id/textViewPhone"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextAddress"
                android:layout_below="@+id/editTextAddress"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number" />


            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextQuantity"
                android:layout_alignLeft="@+id/textViewName"
                android:text="@string/quantity"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextQuantity"
                android:id="@+id/myRadioGroup"
                android:checkedButton="@+id/sound" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up"
                    android:id="@+id/radioButtonPickUp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver"
                    android:id="@+id/deliver"
                    android:layout_marginTop="16dp"
                    android:checked="false"/>


            </RadioGroup>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:layout_below="@+id/myRadioGroup"
                android:text="@string/send_order"
                android:layout_marginTop="16dp"
                />


        </RelativeLayout>

    </LinearLayout>


</ScrollView>
